# lala

./: .gitmodules  CMakeLists.txt  CNAME  LICENSE  README.md  batch.sh  cmaes.jl  collect.sh  mod_load.sh  plot.jl  run.sh  runcmaes.jl
cond/: da-stdp.jl  instrumental.jl  instumental.jl  plot.jl  single.jl
config/: best_quadpus.json  best_stingray.json  best_worm.json  config.json  defaults.json  defaults_params.json  quadpus.shape  quadpus_defaults.json  quadpus_neurons.shape  ranges.json  ranges_params.json  shape_defaults.json  simple.shape  stingray.shape  stingray_defaults.json  stingray_neurons.shape  worm.shape  worm_defaults.json  worm_neurons.shape
julia/: cmaes.jl  daspnet.jl  izhikevich.jl  methods.jl  methods_plot.jl  plot.jl  runcmaes.jl
res/: defaults.json  ranges.json  stingray.shape  stingray_defaults.json  worm_defaults.json
src/: cell.h  cell.hpp  cell_contract.hpp  config.hpp  fluidplugin.hpp  main.cpp  mainconsole.cpp  mainspherepacking.cpp  mainviewer.cpp  neurons.hpp  scenario.h  scenario.hpp
src/viewerplugins/: camera.hpp  colors.hpp  complugin.hpp  grid.hpp
